--- a/kousik.ipynb
+++ b/kousik.ipynb
@@ -2,203 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2f2d9ba7",
+   "execution_count": 22,
+   "id": "23fc8eb4-ceaa-44fc-b908-3f74872424f5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n"
+      "No Match ........\n"
      ]
     }
    ],
    "source": [
-    "o=(lambda a: lambda b,c:(a+b)*c)(5)(3,2)\n",
-    "print(o)"
+    "''' code to take a text data and fetch to match te given data\n",
+    "syntax: re.match(seatchedelement,text) ''' \n",
+    "\n",
+    "import re\n",
+    "text=' hi students how are you!!! '\n",
+    "se=r'histudents'\n",
+    "output=re.match(se,text)\n",
+    "if output:\n",
+    "    print(\"Match found for:\",output.group())\n",
+    "else:\n",
+    "    print(\"No Match ........\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "38bd669d",
+   "execution_count": 30,
+   "id": "60527aa9-a5ed-4f09-b497-ca2848ab1a57",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45\n"
+      "229\n"
      ]
     }
    ],
    "source": [
-    "o=(lambda a: lambda b : lambda c,d:(a+b) * (c+d))(2)(3)(4,5)\n",
-    "print(o)"
+    "import re\n",
+    "text='My number is 229'\n",
+    "match=re.search(r'\\d+',text)\n",
+    "print(match.group())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2e658969",
+   "execution_count": 7,
+   "id": "42d4e263-7a7b-43fc-ac09-23dba0ddc1ee",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence with a number I have 2 500 rupee notes\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: 2\n",
-      "x: 3\n",
-      "125\n"
+      "Second number found 500\n"
      ]
     }
    ],
    "source": [
-    "num=int(input(\"a: \"))\n",
-    "n=int(input(\"x: \"))\n",
-    "oper=lambda a: lambda x:(x+a)**3\n",
-    "numsq=oper(num)\n",
-    "print(numsq(n))"
+    "import re\n",
+    "text = input(\"Enter a sentence with a number\")\n",
+    "matches=list(re.finditer(r'\\d+',text))\n",
+    "if len(matches)>=2:\n",
+    "           print(\"Second number found\",matches[1].group())\n",
+    "elif len(matches)==1:   \n",
+    "           print(\"Only one number found\",matches[0].group())\n",
+    "else:\n",
+    "           print(\"no match\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1d843b00",
+   "execution_count": 15,
+   "id": "72ad7361-a479-428d-874b-9a65ed59583e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence with a number I have 2 locks in 2 1\n",
+      "which number you want to extract: 3\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid Datatype!!!\n"
+      "3th number is: 1\n"
      ]
     }
    ],
    "source": [
-    "# (a-b)/(c-d) expression with different modulations\n",
-    "try:\n",
-    "    o=(lambda a: lambda b: lambda c,d:(a-b)/(c-d))(\"10\")(4)(8,6)\n",
-    "    print(o)\n",
-    "except ZeroDivisionError:\n",
-    "    print(\"Division by Zero error!!!\")\n",
-    "except TypeError:\n",
-    "    print(\"Invalid Datatype!!!\")\n",
-    "    "
+    "import re   \n",
+    "text=input(\"Enter a sentence with a number\")\n",
+    "n=int(input(\"which number you want to extract:\"))\n",
+    "matches=re.findall(r'\\d+',text)\n",
+    "if len(matches)>=n:\n",
+    "    print(f\"{n}th number is:\",matches[n-1])\n",
+    "else:\n",
+    "    print(\"Not found\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0f8b2fca",
+   "execution_count": 19,
+   "id": "062846aa-39f9-43f3-8dfa-9dc34b227f97",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Hi-Students-Good-Morning\n"
+      "Enter your email:  ye@gmail.com\n"
      ]
-    }
-   ],
-   "source": [
-    "''' simple nested lambda string combining with seperator operation for n attributes'''\n",
-    "o=(lambda a:lambda b:lambda c,d:a+'-'+b+'-'+c+'-'+d)('Hi')(\"Students\")(\"Good\",\"Morning\")\n",
-    "print(o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "2005a33a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HI!STUDENTS!!!\n"
+      "valid\n"
      ]
     }
    ],
    "source": [
-    "''' given attributes a,b,c,d are hi ,!,students,!!!\n",
-    "write a nested lambda to concatenate the abcd,by converting a and c to uppercase\n",
-    "output:HI!STUDENTS!!!\n",
-    "'''\n",
-    "p=(lambda a:lambda b:lambda c,d:a.upper()+b+c.upper()+d)('hi')('!')(\"students\",'!!!')\n",
-    "print(p)"
+    "import re\n",
+    "email=input(\"Enter your email: \")\n",
+    "pattern=r'^[a-zA-Z0-9_]+@[a-zA-Z0-9]+\\.[a-zA-Z]{2,}$'\n",
+    "if re.match(pattern,email):\n",
+    "    print(\"valid\")\n",
+    "else:\n",
+    "    print(\"Not Valid\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "27a4f66a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ih olleh stneduts !!!srehcaet\n"
-     ]
-    }
-   ],
-   "source": [
-    "k=(lambda a:lambda b:lambda c,d:a[::-1]+\" \"+b[::-1]+\" \"+c[::-1]+\" \"+d[::-1])('hi')('hello')('students','teachers!!!')\n",
-    "print(k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "60b12af3",
+   "id": "6036e496-85a3-48ab-be88-90bad6cebf1b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "['ih', 'olleh', 'stneduts', '!!!']\n"
+      "Enter your number:  6302257577\n"
      ]
-    }
-   ],
-   "source": [
-    "o=(lambda a: lambda b:lambda c,d:[a[::-1],b[::-1],c[::-1],d[::-1]])('hi')('hello')('students','!!!')\n",
-    "print(o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "6d9137e9",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12, 12, 9, 16]\n"
+      "valid\n"
      ]
     }
    ],
    "source": [
-    "numbers=lambda x: lambda a:a*2 if a>x else a*3\n",
-    "above_5=numbers(5)\n",
-    "num =[4,6,3,8]\n",
-    "o=list(map(above_5,num))\n",
-    "print(o)"
+    "import re\n",
+    "phone= input(\"Enter your number: \")\n",
+    "pattern=r'^[6-9]\\d{9}$'\n",
+    "if re.match(pattern, phone):\n",
+    "      print(\"valid\")\n",
+    "else:\n",
+    "      print(\"No valid\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05d37dd2",
+   "id": "66607041-ada7-4f17-a4e1-1cb21dac90a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -220,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
