--- a/kousik.ipynb
+++ b/kousik.ipynb
@@ -2,185 +2,280 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "23fc8eb4-ceaa-44fc-b908-3f74872424f5",
+   "execution_count": 3,
+   "id": "dea4648b-47fd-4e3c-bdf2-1ed7cd810ff8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No Match ........\n"
+      "Collecting numpy\n",
+      "  Using cached numpy-2.3.2-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
+      "Using cached numpy-2.3.2-cp313-cp313-win_amd64.whl (12.8 MB)\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.3.2\n"
      ]
     }
    ],
    "source": [
-    "''' code to take a text data and fetch to match te given data\n",
-    "syntax: re.match(seatchedelement,text) ''' \n",
-    "\n",
-    "import re\n",
-    "text=' hi students how are you!!! '\n",
-    "se=r'histudents'\n",
-    "output=re.match(se,text)\n",
-    "if output:\n",
-    "    print(\"Match found for:\",output.group())\n",
-    "else:\n",
-    "    print(\"No Match ........\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "60527aa9-a5ed-4f09-b497-ca2848ab1a57",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "229\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "text='My number is 229'\n",
-    "match=re.search(r'\\d+',text)\n",
-    "print(match.group())"
+    "!pip install numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42d4e263-7a7b-43fc-ac09-23dba0ddc1ee",
+   "id": "b65940ad-4eb7-4e43-885c-32c7a982bd03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a sentence with a number I have 2 500 rupee notes\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Second number found 500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import re\n",
-    "text = input(\"Enter a sentence with a number\")\n",
-    "matches=list(re.finditer(r'\\d+',text))\n",
-    "if len(matches)>=2:\n",
-    "           print(\"Second number found\",matches[1].group())\n",
-    "elif len(matches)==1:   \n",
-    "           print(\"Only one number found\",matches[0].group())\n",
-    "else:\n",
-    "           print(\"no match\")"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "72ad7361-a479-428d-874b-9a65ed59583e",
+   "execution_count": 8,
+   "id": "06e1f115-46aa-4449-ae92-b82ee6d0f157",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a sentence with a number I have 2 locks in 2 1\n",
-      "which number you want to extract: 3\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3th number is: 1\n"
+      "Array 1-D [1 2 3 4 5]\n"
      ]
     }
    ],
    "source": [
-    "import re   \n",
-    "text=input(\"Enter a sentence with a number\")\n",
-    "n=int(input(\"which number you want to extract:\"))\n",
-    "matches=re.findall(r'\\d+',text)\n",
-    "if len(matches)>=n:\n",
-    "    print(f\"{n}th number is:\",matches[n-1])\n",
-    "else:\n",
-    "    print(\"Not found\")"
+    "x=np.array([1,2,3,4,5])\n",
+    "print(\"Array 1-D\",x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "062846aa-39f9-43f3-8dfa-9dc34b227f97",
+   "execution_count": 9,
+   "id": "83d606cf-d2c9-4caf-b35f-6d4a832b5072",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your email:  ye@gmail.com\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid\n"
+      "[ 5 12 21 32]\n",
+      "[5, 12, 21, 32]\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "email=input(\"Enter your email: \")\n",
-    "pattern=r'^[a-zA-Z0-9_]+@[a-zA-Z0-9]+\\.[a-zA-Z]{2,}$'\n",
-    "if re.match(pattern,email):\n",
-    "    print(\"valid\")\n",
-    "else:\n",
-    "    print(\"Not Valid\")"
+    "#With Numpy\n",
+    "a=np.array([1,2,3,4])\n",
+    "b=np.array([5,6,7,8])\n",
+    "c=a*b\n",
+    "print(c)\n",
+    "\n",
+    "#Without Numpy\n",
+    "a=[1,2,3,4]\n",
+    "b=[5,6,7,8]\n",
+    "c=[]\n",
+    "for i in range(len(a)):\n",
+    "    c.append(a[i]*b[i])\n",
+    "print(c)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6e9ac322-51c8-4e64-b46c-e87f38039155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array 1D [1 2 3 4]\n",
+      "Array 2D\n",
+      " [[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([1,2,3,4])\n",
+    "print(\"Array 1D\",a)\n",
+    "\n",
+    "b=np.array([[1,2],[3,4]])\n",
+    "print(\"Array 2D\\n\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "58e122b4-4959-42a8-9a0c-a203ade5ba1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ones \n",
+      " [[1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1.]]\n",
+      "Zeros \n",
+      " [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "Identical coordinates: \n",
+      " [[1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1.]]\n",
+      "Array:  [ 0  2  4  6  8 10]\n",
+      "linspace:  [0.   0.25 0.5  0.75 1.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=np.ones((3,6))\n",
+    "print(\"ones \\n\",o)\n",
+    "\n",
+    "z=np.zeros((10,10))\n",
+    "print(\"Zeros \\n\",z)\n",
+    "\n",
+    "i=np.eye(8)\n",
+    "print(\"Identical coordinates: \\n\",i)\n",
+    "\n",
+    "r=np.arange(0,11,2)\n",
+    "print(\"Array: \",r)\n",
+    "\n",
+    "seperate=np.linspace(0,1,5)\n",
+    "print(\"linspace: \",seperate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3e55af68-2136-43e5-b187-5f4259589523",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: [ 6  8 10 12]\n",
+      "product: [ 5 12 21 32]\n",
+      "Square:  [ 1  4  9 16]\n",
+      "Sin values:  [-0.95892427 -0.2794155   0.6569866   0.98935825]\n",
+      "Mean:  2.5\n",
+      "Max :  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Operations on arrays using numpy'''\n",
+    "import numpy as np\n",
+    "a=np.array([1,2,3,4])\n",
+    "b=np.array([5,6,7,8])\n",
+    "print(\"Addition:\",a+b)\n",
+    "print(\"product:\",a*b)\n",
+    "print(\"Square: \",a**2)\n",
+    "print(\"Sin values: \",np.sin(b))\n",
+    "print(\"Mean: \",np.mean(a))\n",
+    "print(\"Max : \",np.max(a))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6036e496-85a3-48ab-be88-90bad6cebf1b",
+   "id": "b0de75fe-eca3-413f-87d3-bd6ac88e6f03",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your number:  6302257577\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid\n"
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "greater than 5:  [6 7 8 9]\n",
+      "less than 5: [1 2 3 4]\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "phone= input(\"Enter your number: \")\n",
-    "pattern=r'^[6-9]\\d{9}$'\n",
-    "if re.match(pattern, phone):\n",
-    "      print(\"valid\")\n",
-    "else:\n",
-    "      print(\"No valid\")"
+    "a=np.arange(1,10)\n",
+    "print(a)\n",
+    "\n",
+    "reshaped=a.reshape((3,3))\n",
+    "print(reshaped)\n",
+    "linear=reshaped.reshape(-1)\n",
+    "print(linear)\n",
+    "\n",
+    "print(\"greater than 5: \",linear[linear>5])\n",
+    "print(\"less than 5:\",linear[linear<5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2112c7c7-b753-4345-8ad6-8bbd10f1abe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random numbers between 0 to 3:  [0.13901248 0.60117863 0.87522693]\n",
+      "random integer: \n",
+      " 60 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Random numbers between 0 to 3: \",np.random.rand(3))\n",
+    "print(\"random integer: \\n\",np.random.randint(1,100),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c0d605c8-5df1-4e83-9fcf-9895aa977d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' code to print a 3x3 matrix which ere filled with boolean value True using numpy'''\n",
+    "import numpy as np\n",
+    "matrix=np.full((3,3),True,dtype=bool)\n",
+    "print(matrix)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66607041-ada7-4f17-a4e1-1cb21dac90a0",
+   "id": "2aedb9c6-1e1b-4513-bb43-2da6f0f8cc13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -202,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
